src/tests/valid/ivdserial/classusingmodelsforinstance.ivdserial
=================================Element========================================
Path: anonymous-1-HORRIBLY-MAANGLED
Model theModel
------------------------------------------Body
-----------------------------State default
------------Attr Key: size-a
Main Constraint
      |
model.widthat

